--- a/src/Component/HuaButton/index.scss
+++ b/src/Component/HuaButton/index.scss
@@ -1,31 +1,22 @@
 .hua_button{
-  line-height: 1.5;
   display: inline-block;
-  font-weight: 400;
   text-align: center;
-  border: 1px solid transparent;
-  white-space: nowrap;
+  border: 1px solid #d9d9d9;
   padding: 0 15px;
   font-size: 14px;
   border-radius: 4px;
   height: 32px;
-  -webkit-transition: all .3s cubic-bezier(.645,.045,.355,1);
-  transition: all .3s cubic-bezier(.645,.045,.355,1);
-  position: relative;
-  -webkit-box-shadow: 0 2px 0 rgba(0,0,0,.015);
-  box-shadow: 0 2px 0 rgba(0,0,0,.015);
- 
-  border-color: #d9d9d9;
-
+  margin-right: 8px;
   }
 .hua_button_disable{
   @extend .hua_button;
   background: #d9d9d9;
   color: rgba(0,0,0,.25);
+  cursor: not-allowed;
 }
 .hua_button_normal{
   @extend .hua_button;
-  color: rgba(236, 236, 236, 0.65);
+  color: rgba(0,0,0,.65);
   background-color: #fff;
   cursor: pointer;
 }
