--- a/src/Component/HuaSelect/index.scss
+++ b/src/Component/HuaSelect/index.scss
@@ -2,28 +2,30 @@
   width: 100px;
   position: relative;
   height: 30px;
-  
   .content_group{
     width: 100%;
     height: 100%;
-    border-radius: 10px;
-    background: #40a9ff;
+    line-height: 1;
+    padding: 0 10px;
+    border-radius: 4px;
+    background: #ffffff;
     display: flex;
-  justify-content: space-between;
-  align-items: center;
-  &:hover{
-    border: 1px solid rgb(6, 160, 221);
-  }
+    border: 1px solid #d9d9d9;
+    justify-content: space-between;
+    align-items: center;
+    &:hover{
+      border: 1px solid rgb(6, 160, 221);
+    }
   }
   
   .options{
     position: absolute;
     width: 100%;
-    background: rgb(228, 228, 228);
+    background: #fff;
     li{
       list-style: none;
       &:hover{
-        border: solid 1px red;
+        background: rgb(218, 235, 243)
       }
     }
   }
