--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,10 @@
 body{
   padding: 0;
   margin: 0;
+  input{
+    padding: 0;
+    margin: 0;
+  }
   .container{
     min-height: 100vh;
     .header{
