--- a/src/Component/HuaCollapse/index.scss
+++ b/src/Component/HuaCollapse/index.scss
@@ -1,13 +1,18 @@
+@import '../../common.scss';
 .hua_panel_body{
   transition: all .3s;
   max-width: 500px;
   max-height: 300px;
-  background: rgb(92, 92, 92);
   border: solid 1px rgb(158, 158, 158);
+  padding: 16px;
+  line-height: 1.5;
+  color: $default-balck;
+  box-sizing: border-box;
 }
 .hua_panel_header{
   border: solid 1px rgb(158, 158, 158);
   max-width: 500px;
+  color: rgba(0,0,0,.85);
   height: 50px; 
   background: rgba(245, 245, 245, 0.85);
   line-height: 50px;
