--- a/src/Component/HuaPagination/index.scss
+++ b/src/Component/HuaPagination/index.scss
@@ -7,6 +7,8 @@
     display: flex;
     align-items: center;
     justify-content: flex-start;
+
+  }
   .page_block{
     margin-right: 5px;
     border-radius: 4px;
@@ -15,7 +17,7 @@
     border: 1px solid #d9d9d9;
     text-align: center;
     line-height: 32px;
-    background: rgb(241, 241, 241);
+    background: #fff;
     &:hover{
       border-color:  #40a9ff;
     }
@@ -23,6 +25,4 @@
       border-color:  #40a9ff;
     }
   }
-  }
-  
 }
