自定义搜索表格组件

--- a/src/Component/HuaCollapse/index.scss
+++ b/src/Component/HuaCollapse/index.scss
@@ -6,7 +6,7 @@
   border: solid 1px rgb(158, 158, 158);
   padding: 16px;
   line-height: 1.5;
-  color: $default-balck;
+  color: $default-black;
   box-sizing: border-box;
 }
 .hua_panel_header{
