--- a/src/Component/HuaTabs/index.scss
+++ b/src/Component/HuaTabs/index.scss
@@ -22,9 +22,9 @@
 .tabs_header{
   width: 500px;
   display: flex;
-  color: $default-balck;
+  color: $default-black;
   justify-content: space-between;
-  border-bottom: 1px solid $default-balck;
+  border-bottom: 1px solid $default-black;
   margin-bottom: 10px;
   .tabs_header_block{
    
