--- a/src/common.scss
+++ b/src/common.scss
@@ -6,7 +6,7 @@ $success: #67C23A;
 $warning: #E6A23C;
 $danger: #F56C6C;
 $info: #909399;
-$default-balck: rgba(0,0,0,.65);
+$default-black: rgba(0,0,0,.65);
 
 /* methods
 -------------------------- */
