--- a/src/Component/HuaButton/index.scss
+++ b/src/Component/HuaButton/index.scss
@@ -6,6 +6,7 @@
   font-size: 14px;
   border-radius: 4px;
   height: 32px;
+  line-height: 32px;
   min-width: 80px;
   margin-right: 8px;
   outline: none;
