--- a/src/Component/HuaUpload/index.scss
+++ b/src/Component/HuaUpload/index.scss
@@ -1,4 +1,6 @@
+@import '../../common.scss';
 .hua_upload{
+  color: $default-black;
   position: relative;
   .hua_upload_input{
     position: absolute;
