--- a/src/Component/HuaBreadCrumb/index.scss
+++ b/src/Component/HuaBreadCrumb/index.scss
@@ -1,3 +1,4 @@
+@import '../../common.scss';
 .breadcrumb_item{
   list-style: none;
   a{
@@ -8,6 +9,7 @@
   }
 }
 .breadcrumb{
+  color: $default-black;
   display: flex;
   align-items: center;
 }
