--- a/src/Component/HuaInputNumber/index.scss
+++ b/src/Component/HuaInputNumber/index.scss
@@ -1,3 +1,4 @@
+@import '../../common.scss';
 .input_number{
   display: flex;
   align-items: center;
@@ -9,6 +10,7 @@
     border: 1px solid #d9d9d9;
     border-right: 0;
     border-radius: 4px 0 0 4px;
+    color: $default-black
   }
   .input_number_func{
     display: flex;
@@ -24,6 +26,7 @@
       width: 16px;
       height: 16px;
       line-height: 16px;
+      color: $default-black
     }
   }
 }
