--- a/src/Component/HuaTimeline/index.scss
+++ b/src/Component/HuaTimeline/index.scss
@@ -1,3 +1,4 @@
+@import '../../common.scss';
 .hua_timeline_item{
   list-style: none;
   width: 500px;
@@ -24,6 +25,7 @@
      top: 10px;
     }
     .timeline_content{
+      color: $default-black;
       margin: 0 0 0 18px;
       position: relative;
       top: -6px;
