--- a/src/Component/HuaButton/index.scss
+++ b/src/Component/HuaButton/index.scss
@@ -19,7 +19,6 @@
 }
 .hua_button_normal{
   @extend .hua_button;
-  color: rgba(0,0,0,.65);
-  background-color: #fff;
+  color: '#fff';
   cursor: pointer;
 }
