--- a/src/Component/HuaButton/index.scss
+++ b/src/Component/HuaButton/index.scss
@@ -19,6 +19,7 @@
 }
 .hua_button_normal{
   @extend .hua_button;
-  color: '#fff';
+  color: rgba(0,0,0,.65);
+  background-color: #fff;
   cursor: pointer;
 }
