--- a/src/Component/HuaSelect/index.scss
+++ b/src/Component/HuaSelect/index.scss
@@ -42,6 +42,10 @@
     &:hover{
       border: 1px solid rgb(6, 160, 221);
     }
+    .select_content{
+      width: 100%;
+      height: 100%;
+    }
   }
   
   .options{
