--- a/src/Component/HuaTable/index.scss
+++ b/src/Component/HuaTable/index.scss
@@ -1,7 +1,6 @@
 @import '../../common.scss';
 .hua_table{
   position: relative;
-  min-height: 100px;
   .table_tr{
     color: $default-black;
     border-top: 1px solid #ebedf0;
@@ -29,7 +28,7 @@
   }
   .loading{
     width: 100%;
-    height: 100px;
+    height: auto;
     background: #8a8a8a93;
     position: absolute;
     top: 0;
