--- a/src/Component/HuaDatePicker/index.scss
+++ b/src/Component/HuaDatePicker/index.scss
@@ -1,35 +1,36 @@
+.table_tbody_tr {
+  display: flex;
 
-.table_tbody_tr{
-    display: flex;
+  .tbale_td {
+    display: block;
+    margin: 2px;
+    color: rgba(0, 0, 0, 0.65);
+    border-radius: 2px;
+    width: 24px;
+    height: 24px;
+    line-height: 22px;
+    border: 1px solid transparent;
+    padding: 0px;
+    background: transparent;
+    text-align: center;
 
-    .tbale_td{
-        display: block;
-        margin: 0 auto;
-        color: rgba(0,0,0,.65);
-        border-radius: 2px;
-        width: 24px;
-        height: 24px;
-        line-height: 22px;
-        border: 1px solid transparent;
-        padding: 0;
-        background: transparent;
-        text-align: center;
-    }
+    border: 1px solid rgb(99, 98, 98);
+  }
 }
 
-.table_thead_tr{
-    display: flex;
-    .table_th{
-        display: block;
-            margin: 0 auto;
-            color: rgba(0,0,0,.65);
-            border-radius: 2px;
-            width: 24px;
-            height: 24px;
-            line-height: 22px;
-            border: 1px solid transparent;
-            padding: 0;
-            background: transparent;
-            text-align: center;
-    }
+.table_thead_tr {
+  display: flex;
+  .table_th {
+    display: block;
+    margin: 0 auto;
+    color: rgba(0, 0, 0, 0.65);
+    border-radius: 2px;
+    width: 24px;
+    height: 24px;
+    line-height: 22px;
+    border: 1px solid transparent;
+    padding: 0;
+    background: transparent;
+    text-align: center;
+  }
 }
