--- a/src/Component/HuaInput/index.scss
+++ b/src/Component/HuaInput/index.scss
@@ -4,6 +4,26 @@
  flex-direction: row;
  justify-content: flex-start;
  align-items: center;
+ .input{
+  box-sizing: border-box;
+  margin: 0;
+  
+  list-style: none;
+  position: relative;
+  display: inline-block;
+  padding: 4px 11px;
+  width: 100%;
+  height: 32px;
+  font-size: 14px;
+  line-height: 1.5;
+  color: rgba(0,0,0,.65);
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #d9d9d9;
+  border-radius: 4px;
+  -webkit-transition: all .3s;
+  transition: all .3s;
+ }
  :global{
    .ant-input{
      width: 200px !important;
