--- a/src/Component/HuaSlider/index.scss
+++ b/src/Component/HuaSlider/index.scss
@@ -1,53 +1,89 @@
-// input[type="range"] {
-//   -webkit-appearance: none;
-//   width: 300px;
-//   background: red;
-//   border-radius: 10px; /*这个属性设置使填充进度条时的图形为圆角*/
+// /* CSS Document */
+
+// .aria_widget_text_slider {
+//   margin-top: 0.5em;
+//   margin-bottom: 0.5em;
+//   height: 120px;
+
+//   .rail {
+//     margin: 2px;
+//     padding: 1px;
+//     background-color: #eee;
+//     border: 1px solid #888;
+//     position: relative;
+//     height: 10px;
+//     &.focus {
+//       background-color: #AAA;
+//     }
+    
+//   }
+//   .label{
+//     display: block;
+//   margin-top: 0.5em;
+//   margin-bottom: 0.5em;
+//   font-weight: bold;
+//   }
+//   .thumb  {
+//     width: 8px;
+//     height: 32px;
+//     background-color: rgb(248, 123, 123);
+//     position: absolute;
+//     top: 50%;
+//     left: 0;
+//     transform: translateY(-50%);
+//     &:hover {
+//       // outline: 2px solid #888;
+//       background-color: #E0CB52;
+//     }
+//   }
+
+//   .value  {
+//     text-align: center;
+//     display: block;
+//     position: absolute;
+//   }
 // }
 
-// input[type="range"]::-webkit-slider-runnable-track {
-//   height: 15px;
-//   border-radius: 10px; /*将轨道设为圆角的*/
-//   background: orange;
-// }
-// input[type="range"]:focus {
-//   outline: none;/*原始的控件获取到焦点时，会显示包裹整个控件的边框，所以还需要把边框取消。*/
-// }
-// input[type="range"]::-webkit-slider-thumb {
-//   -webkit-appearance: none;
-//   height: 25px;
-//   width: 25px;
-//   margin-top: -5px; /*使滑块超出轨道部分的偏移量相等*/
-//   background: #ffffff; 
-//   border-radius: 50%; /*外观设置为圆形*/
-//   border: solid 0.125em rgba(205, 224, 230, 0.5); /*设置边框*/
-//   box-shadow: 0 .125em .125em #3b4547; /*添加底部阴影*/
-// }
-.slider{
-  position: relative;
-  width: 200px;
-  height: 6px;
-  display: flex;
-  padding: 10px;
-  align-items: center;
-}
-.slider_background{
-  width: 100%;
-  height: 6px;
-  position: absolute;
-  background: black;
-}
-.slider_block{
-  position: absolute;
-  border: solid 1px red;
-  border-radius: 50%;
-  width: 20px;
-  height: 20px;
-  z-index: 3;
-}
-.slider_fill{
-  background: red;
-  position: absolute;
-  z-index: 2;
-  height: 6px;
-}
+ .container{
+   margin: 40px;
+   height: 4px;
+   position: relative;
+   .rail{
+    position: absolute;
+    left: 0;
+    background: #40a9ff;
+    z-index: 5;
+    height: 4px;
+   }
+   .background{
+     width: 300px;
+     background: #f5f5f5;
+     height: 4px;
+     position: absolute;
+     
+   }
+   .thumb{
+     z-index: 10;
+     width: 14px;
+     height:14px;
+     background: #ffff;
+     position: absolute;
+     border: 2px solid #40a9ff;
+     border-radius: 50%;
+     left: 0;
+     cursor: pointer;
+     top: 50%;
+     transform: translateY(-50%)
+   }
+   .number{
+
+    position: absolute;
+    left: 310px;
+    top: 50%;
+     transform: translateY(-50%)
+   }
+ }
+
+
+
+
