--- a/src/Component/HuaSlider/index.scss
+++ b/src/Component/HuaSlider/index.scss
@@ -1,48 +1,4 @@
-// /* CSS Document */
 
-// .aria_widget_text_slider {
-//   margin-top: 0.5em;
-//   margin-bottom: 0.5em;
-//   height: 120px;
-
-//   .rail {
-//     margin: 2px;
-//     padding: 1px;
-//     background-color: #eee;
-//     border: 1px solid #888;
-//     position: relative;
-//     height: 10px;
-//     &.focus {
-//       background-color: #AAA;
-//     }
-    
-//   }
-//   .label{
-//     display: block;
-//   margin-top: 0.5em;
-//   margin-bottom: 0.5em;
-//   font-weight: bold;
-//   }
-//   .thumb  {
-//     width: 8px;
-//     height: 32px;
-//     background-color: rgb(248, 123, 123);
-//     position: absolute;
-//     top: 50%;
-//     left: 0;
-//     transform: translateY(-50%);
-//     &:hover {
-//       // outline: 2px solid #888;
-//       background-color: #E0CB52;
-//     }
-//   }
-
-//   .value  {
-//     text-align: center;
-//     display: block;
-//     position: absolute;
-//   }
-// }
 
  .container{
    margin: 40px;
@@ -56,7 +12,6 @@
     height: 4px;
    }
    .background{
-     width: 300px;
      background: #f5f5f5;
      height: 4px;
      position: absolute;
@@ -73,12 +28,25 @@
      left: 0;
      cursor: pointer;
      top: 50%;
-     transform: translateY(-50%)
+     transform: translateY(-50%);
+
+     .tooltip{
+       position: absolute;
+       width: 26px;
+       height: 30px;
+       border-radius: 5px;
+       background: #40a9ff;
+      transform: translateX(-50%);
+      left: 5px;
+      top: -40px;
+      color: #ffff;
+      text-align: center;
+      line-height: 30px;
+     }
    }
    .number{
 
     position: absolute;
-    left: 310px;
     top: 50%;
      transform: translateY(-50%)
    }
